[package]
name = "devto-cli"
version = "0.3.1"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "A CLI tool to manage dev.to articles"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/devto-cli/"
homepage = "https://github.com/ken-matsui/devto-cli#readme"
documentation = "https://docs.rs/devto-cli"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive", "env"] }
convert_case = "0.6"
dialoguer = "0.10"
frontmatter = "0.4"
http = "0.2"
inflections = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
isahc = { version = "1.7", features = ["json"] }
webbrowser = "0.8"

[[bin]]
name = "devto"
path = "src/main.rs"
